--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,33 +1,40 @@
-#compiler
-NAME = RPN
-CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+NAME		:= RPN
 
-# directories
-SRC_DIR = ./src
-OBJ_DIR = ./obj
-BIN_DIR = bin
+CXX			:= c++
+CXXFLAGS	:= -Wall -Wextra -Werror -std=c++98 -Iinclude
 
-# archives
-SRC = $(SRC_DIR)/main.cpp $(SRC_DIR)/RPN.cpp
-OBJ = $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(SRC))
+SRC_DIR		:= src
+OBJ_DIR		:= build
+INC_DIR		:= include
 
-# Rules
+SRC			:= $(SRC_DIR)/main.cpp $(SRC_DIR)/RPN.cpp
+OBJ			:= $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(SRC))
+
+#Colors:
+GREEN		:= \e[92;5;118m
+YELLOW		:= \e[93;5;226m
+GRAY		:= \e[33;2;37m
+RESET		:= \e[0m
+CURSIVE		:= \e[33;3m
+
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
-	@echo "$(NAME) it's Done!"
+	@printf "$(CURSIVE)$(GRAY)- Compiling $(NAME)... $(RESET)\n"
+	@$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
+	@printf "$(GREEN)- Executable ready.\n$(RESET)"
 
 $(OBJ_DIR):
-	mkdir -p $(OBJ_DIR)
+	@mkdir -p $(OBJ_DIR)
 
 $(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp | $(OBJ_DIR)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+	@printf "$(CURSIVE)$(GRAY)- Compiling $<... $(RESET)\n"
+	@$(CXX) $(CXXFLAGS) -c $< -o $@
+	@echo "[OK] Compilado: $< -> $@"
 
 clean:
 	@rm -rf $(OBJ_DIR)
-	echo "Objects files removed."
+	@echo "Objects files removed."
 
 fclean: clean
 	@rm -f $(NAME)
@@ -35,4 +42,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean re
